--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,26 @@
 <lib-app-shared></lib-app-shared>
 <lib-svg-icon></lib-svg-icon>
 
-<button type="button" (click)="onClick($event)">Click Me.</button>
+<p>
+  <button class="btn btn-primary" type="button" (click)="onClick($event)">Click Me.</button>
+</p>
+
+<p>
+  <button mat-button>Basic</button>
+  <button mat-button color="primary">Primary</button>
+  <button mat-button color="accent">Accent</button>
+  <button mat-button color="warn">Warn</button>
+  <button mat-button disabled>Disabled</button>
+  <a mat-button href="https://www.google.com/" target="_blank">Link</a>
+</p>
+
+<p>
+  <button mat-raised-button>Basic</button>
+  <button mat-raised-button color="primary">Primary</button>
+  <button mat-raised-button color="accent">Accent</button>
+  <button mat-raised-button color="warn">Warn</button>
+  <button mat-raised-button disabled>Disabled</button>
+  <a mat-raised-button href="https://www.google.com/" target="_blank">Link</a>
+</p>
+
 <router-outlet></router-outlet>
