--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <li><a routerLink="/home">home module</a></li>
   <li><a routerLink="/twbs">@ng-bootstrap/bootstrap module</a></li>
   <li><a routerLink="/mat">@angular/material module</a></li>
+  <li><a routerLink="/antd">ng-zorro-antd module</a></li>
 </ul>
 
 <router-outlet></router-outlet>
