--- a/src/app/antd/index/index.component.html
+++ b/src/app/antd/index/index.component.html
@@ -2,3 +2,12 @@
 
 <button type="button" nz-button nzType="primary">AntD Button</button>
 
+<table nzTable>
+
+</table>
+
+<nz-layout>
+  <nz-header>
+    <ul nz-menu nzMode="horizontal"></ul>
+  </nz-header>
+</nz-layout>
